--- a/Xam.LaGalerna/Xam.LaGalerna/MainView.xaml
+++ b/Xam.LaGalerna/Xam.LaGalerna/MainView.xaml
@@ -2,18 +2,20 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Xam.LaGalerna"
-             xmlns:sharedTransitions="clr-namespace:Plugin.SharedTransitions;assembly=Plugin.SharedTransitions"
-             xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms" 
+             xmlns:cells="clr-namespace:Xam.LaGalerna.Views.Cells"
              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
              ios:Page.UseSafeArea="true"
+             xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms" 
+             xmlns:sharedTransitions="clr-namespace:Plugin.SharedTransitions;assembly=Plugin.SharedTransitions"
              xmlns:views="clr-namespace:Xam.LaGalerna.Views"
+             xmlns:templates="clr-namespace:Xam.LaGalerna.Views.Templates"
              BackgroundColor="{StaticResource WhiteColor}"
              x:Class="Xam.LaGalerna.MainView">
     <ContentPage.Resources>
         <ResourceDictionary>
             <Style x:Key="HighlightStyle" TargetType="Grid">
                 <Setter Property="BackgroundColor" Value="{StaticResource WhiteColor}" />
-                <Setter Property="WidthRequest" Value="200" />
+                <Setter Property="HeightRequest"  Value="170" />
             </Style>
             <Style x:Key="ArtItemTitleStyle" TargetType="Label">
                 <Setter Property="TextColor" Value="{StaticResource WhiteColor}" />
@@ -42,90 +44,71 @@
         <Grid>
             <Grid.RowDefinitions>
                 <RowDefinition Height="70"/>
+                <RowDefinition Height="40"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <Grid x:Name="gridHeader">
-            <Image x:Name="LogoImage"                                                            
+                <Image x:Name="LogoImage"                                                            
                    Aspect="AspectFill"
                    IsEnabled="True"                    
                    Source="{local:ImageResource Xam.LaGalerna.Assets.logo.png}" 
                    HorizontalOptions="CenterAndExpand" 
                    VerticalOptions="CenterAndExpand">
-            </Image>
+                </Image>
             </Grid>
-            <ScrollView 
-                VerticalOptions="Fill"
-                Grid.Row="1"
-                HorizontalOptions="Fill"                
-                Orientation="Vertical"
-                HorizontalScrollBarVisibility="Never"
-                VerticalScrollBarVisibility="Default">
-                <StackLayout                      
-                    Padding="20, 0, 0, 36"
-                    Orientation="Vertical"
-                    BindableLayout.ItemsSource="{Binding SectionItems}">
-                    <BindableLayout.ItemTemplate>
+            <Grid x:Name="gridMenu" Grid.Row="1" BackgroundColor="{StaticResource BlackColor}">
+
+                <CollectionView                    
+                            HorizontalOptions="Fill" 
+                            VerticalOptions="Fill"
+                            ItemsSource="{Binding SectionItems}"
+                            InputTransparent="True">
+                    <CollectionView.ItemsLayout>
+                        <GridItemsLayout                                     
+                                    Orientation="Horizontal" 
+                                    Span="1"/>
+                    </CollectionView.ItemsLayout>
+                    <CollectionView.ItemTemplate>
                         <DataTemplate>
-                            <Grid
-            RowSpacing="0">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="Auto" />
-                                    <RowDefinition Height="220" />
-                                </Grid.RowDefinitions>
-                                <Grid BackgroundColor="{StaticResource BackGrayColor}"
-                Padding="20, 0"
-                ColumnSpacing="0"
-                Grid.Row="0">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition />
-                                        <ColumnDefinition />
-                                    </Grid.ColumnDefinitions>
+                            <Grid WidthRequest="200">
+                                <Grid.GestureRecognizers>
+                                    <TapGestureRecognizer                                                            
+                                        Tapped="Menu_SelectionChanged"/>
+                                </Grid.GestureRecognizers>
+                                <Label VerticalOptions="Center" HorizontalOptions="Center" Text="{Binding Title}" Style="{StaticResource HighlightPaintinStyle}" TextColor="{StaticResource WhiteColor}" ></Label>
+                            </Grid>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
 
-
-                                    <Label 
-                    Grid.Column="0"
-                    Text="{Binding Title}"
-                    Style="{StaticResource HighlightPaintinStyle}"/>
-                                    <StackLayout
-                    Grid.Column="1"
-                    Orientation="Horizontal"
-                    HorizontalOptions="End">
-                                    </StackLayout>
-
-                                    <Grid 
-                        BackgroundColor="{StaticResource BlackColor}"
-                        HeightRequest="1"
-                        VerticalOptions="End"
-                        Grid.ColumnSpan="3"
-                        Margin="0"/>
-
-                                </Grid>
-                                <ScrollView 
-                Grid.Row="1"
-                Orientation="Horizontal"
-                HorizontalScrollBarVisibility="Default"
-                VerticalScrollBarVisibility="Never">
-                                    <StackLayout  
-                    x:Name="Highlights"
-                    Padding="20, 6, 0, 36"
-                    Orientation="Horizontal"
-                    BindableLayout.ItemsSource="{Binding RssItems}">
-                                        <BindableLayout.ItemTemplate>
-                                            <DataTemplate>
-                                                <Grid
-                                x:Name="HighlightTemplate"
+            </Grid>
+            <CollectionView 
+                Grid.Row="2"
+                BindingContext="{Binding SectionDisplayItems[0]}"
+                ItemsSource="{Binding RssItems}"
+                >
+                <CollectionView.ItemsLayout>
+                    <GridItemsLayout                          
+                                    Orientation="Vertical" 
+                                    Span="2"/>
+                </CollectionView.ItemsLayout>
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid
+                            Padding="2"
                                 RowSpacing="0"
                                 Style="{StaticResource HighlightStyle}">
-                                                    <Grid.GestureRecognizers>
-                                                        <TapGestureRecognizer
+
+                            <Grid.GestureRecognizers>
+                                <TapGestureRecognizer                                                            
                                         Tapped="OnHighlightTapped"/>
-                                                    </Grid.GestureRecognizers>
-                                                    <Grid.RowDefinitions>
-                                                        <RowDefinition Height="*" />
-                                                        <RowDefinition Height="Auto" />
-                                                        <RowDefinition Height="Auto" />
-                                                    </Grid.RowDefinitions>
-                                                    <Image x:Name="BackImage" 
+                            </Grid.GestureRecognizers>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
+                            <Image x:Name="BackImage" 
                                                            Grid.Row="0"
                                                            Grid.RowSpan="3"
                                                            Aspect="AspectFill" 
@@ -135,8 +118,8 @@
                                                            WidthRequest="100"
                                                            HorizontalOptions="Center" 
                                                            VerticalOptions="Center">
-                                                    </Image>
-                                                    <ffimageloading:CachedImage 
+                            </Image>
+                            <ffimageloading:CachedImage 
                                     Grid.Row="0"
                                     Grid.RowSpan="3"
                                     Aspect="AspectFill"
@@ -145,23 +128,16 @@
                                     sharedTransitions:Transition.TagGroup="1"
                                     sharedTransitions:Transition.Tag="{Binding Number}" />
 
-                                                    <BoxView Color="Black" Opacity=".55" Grid.Row="0" Grid.RowSpan="3" Grid.Column="0"/>
-                                                    <Label
+                            <BoxView Color="Black" Opacity=".55" Grid.Row="0" Grid.RowSpan="3" Grid.Column="0"/>
+                            <Label
                                     Grid.Row="1"
                                     Text="{Binding Title}"
                                     Style="{StaticResource ArtItemTitleStyle}"/>
-                                                </Grid>
-                                            </DataTemplate>
-                                        </BindableLayout.ItemTemplate>
-                                    </StackLayout>
-                                </ScrollView>
-
-                            </Grid>
-                        </DataTemplate>
-                    </BindableLayout.ItemTemplate>
-                </StackLayout>
-            </ScrollView>
-            <views:LoadingView x:Name="LoadingView" IsVisible="{Binding IsBusy}" Grid.RowSpan="3" />
+                        </Grid>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+            <views:LoadingView x:Name="LoadingView" IsVisible="{Binding IsBusy}" Grid.Row="2" Grid.RowSpan="1" />
         </Grid>
     </ContentPage.Content>
 
