--- a/Xam.LaGalerna/Xam.LaGalerna/Views/RssDetailView.xaml
+++ b/Xam.LaGalerna/Xam.LaGalerna/Views/RssDetailView.xaml
@@ -5,6 +5,7 @@
              xmlns:xamanimation="clr-namespace:Xamanimation;assembly=Xamanimation"
              xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
              xmlns:templates="clr-namespace:Xam.LaGalerna.Views.Templates"
+             xmlns:controls="clr-namespace:Xam.LaGalerna.Controls"
              BackgroundColor="{StaticResource WhiteColor}"
              xmlns:local="clr-namespace:Xam.LaGalerna"
              x:Class="Xam.LaGalerna.Views.RssDetailView">
@@ -23,7 +24,7 @@
                 <Setter Property="TextColor" Value="{StaticResource BlackColor}" />
                 <Setter Property="FontSize" Value="{StaticResource FontSize26}" />
                 <Setter Property="HorizontalOptions" Value="Center" />
-                <Setter Property="Margin" Value="6, 24, 6, 6" />
+                <Setter Property="Margin" Value="12, 24, 12, 6" />
             </Style>
 
             <Style x:Key="ArtItemSubtitleStyle" TargetType="Label">
@@ -46,6 +47,19 @@
                 <Setter Property="FontFamily" Value="{StaticResource UbuntuLight}" />
                 <Setter Property="TextColor" Value="{StaticResource BlackColor}" />
                 <Setter Property="FontSize" Value="{StaticResource FontSize16}" />
+                <Setter Property="LineHeight" Value="1.5"/>
+            </Style>
+
+            <Style x:Key="RelatedContentTitleStyle" TargetType="Label">
+                <Setter Property="TextColor" Value="DarkGray" />
+                <Setter Property="FontSize" Value="{StaticResource FontSize12}" />
+                <Setter Property="Margin" Value="0, 6, 0, 0" />
+            </Style>
+
+            <Style x:Key="RelatedContentSubtitleStyle" TargetType="Label">
+                <Setter Property="MaxLines" Value="1" />
+                <Setter Property="FontSize" Value="{StaticResource FontSize12}" />
+                <Setter Property="Margin" Value="0, 0, 0, 6" />
             </Style>
 
         </ResourceDictionary>
@@ -57,7 +71,10 @@
         </EventTrigger>
     </ContentPage.Triggers>
     <ContentPage.Content>
-        <ScrollView
+        <ScrollView 
+            x:Name="ParallaxScroll" 
+            VerticalOptions="FillAndExpand" 
+            HorizontalOptions="FillAndExpand"
             Orientation="Vertical">
             <Grid
                 RowSpacing="0">
@@ -66,7 +83,9 @@
                     <RowDefinition />
                 </Grid.RowDefinitions>
                 <!-- HEADER -->
-                <Grid
+                <Grid x:Name="HeaderPanel"
+                      VerticalOptions="FillAndExpand"
+                      HorizontalOptions="FillAndExpand" 
                     Grid.Row="0">
                     <Image x:Name="LogoImage"                                                            
                    Aspect="AspectFill"
@@ -129,9 +148,7 @@
                             Style="{StaticResource BriefIntroducctionStyle}"/>
                         <CollectionView
                             Grid.Row="1"                            
-                            ItemsSource="{Binding ArtItem.Related}"
-                            SelectionChanged="CollectionView_SelectionChanged"
-                            SelectionMode="Single"
+                            ItemsSource="{Binding ArtItem.Related}"                           
                             InputTransparent="True">
                             <CollectionView.ItemsLayout>
                                 <GridItemsLayout                                     
@@ -140,7 +157,41 @@
                             </CollectionView.ItemsLayout>
                             <CollectionView.ItemTemplate>
                                 <DataTemplate>
-                                    <templates:RelatedContentTemplate />
+                                    <Grid
+            RowSpacing="0"
+            HeightRequest="150"
+            BackgroundColor="{StaticResource BackGrayColor}"
+            Padding="0, 0, 6, 0">
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="*" />
+                                            <RowDefinition Height="Auto" />
+                                            <RowDefinition Height="Auto" />
+                                        </Grid.RowDefinitions>
+                                        <Grid.GestureRecognizers>
+                                            <TapGestureRecognizer                                                            
+                                        Tapped="Related_SelectionChanged"/>
+                                        </Grid.GestureRecognizers>
+                                        <Image x:Name="BackImage" 
+                                                           Grid.Row="0"
+                                                           Grid.RowSpan="3"
+                                                           Aspect="AspectFill" 
+                                                           IsEnabled="True"  
+                                                           Source="{local:ImageResource Xam.LaGalerna.Assets.logo_small.png}" 
+                                                           HeightRequest="100"
+                                                           WidthRequest="100"
+                                                           HorizontalOptions="Center" 
+                                                           VerticalOptions="Center">
+                                        </Image>
+                                        <ffimageloading:CachedImage
+                Grid.Row="0"
+                Aspect="AspectFill"
+                Source="{Binding UrlImg}"/>
+                                        <Label
+                Grid.Row="2"
+                Text="{Binding Title}"
+                Style="{StaticResource RelatedContentSubtitleStyle}"/>
+                                    </Grid>
+
                                 </DataTemplate>
                             </CollectionView.ItemTemplate>
                         </CollectionView>
