--- a/Xam.LaGalerna/Xam.LaGalerna/Views/Base/CustomNavigationPage.xaml
+++ b/Xam.LaGalerna/Xam.LaGalerna/Views/Base/CustomNavigationPage.xaml
@@ -4,6 +4,6 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="Xam.LaGalerna.Views.CustomNavigationPage"    
-    BarBackgroundColor="{StaticResource WhiteColor}"
-    BarTextColor="{StaticResource BlackColor}">
+    BarBackgroundColor="{StaticResource BlackColor}"
+    BarTextColor="{StaticResource WhiteColor}">
 </sharedtransitions:SharedTransitionNavigationPage>
