--- a/Xam.LaGalerna/Xam.LaGalerna/Views/RssDetailVideoView.xaml
+++ b/Xam.LaGalerna/Xam.LaGalerna/Views/RssDetailVideoView.xaml
@@ -4,63 +4,18 @@
              xmlns:sharedTransitions="clr-namespace:Plugin.SharedTransitions;assembly=Plugin.SharedTransitions"
              xmlns:xamanimation="clr-namespace:Xamanimation;assembly=Xamanimation"
              xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
-             xmlns:templates="clr-namespace:Xam.LaGalerna.Views.Templates"
+             xmlns:video="clr-namespace:Xam.Forms.VideoPlayer;assembly=Xam.Forms.VideoPlayer"
              xmlns:local="clr-namespace:Xam.LaGalerna"
              BackgroundColor="{StaticResource WhiteColor}"
              x:Class="Xam.LaGalerna.Views.RssDetailVideoView">
     <ContentPage.Resources>
         <ResourceDictionary>
-
             <xamanimation:StoryBoard
                 x:Key="ArtItemContentAnimation"
-                Target="{x:Reference ArtItemContent}">
+                Target="{x:Reference VideoItemContent}">
                 <xamanimation:TranslateToAnimation TranslateY="0" Duration="300"/>
                 <xamanimation:FadeInAnimation  />
             </xamanimation:StoryBoard>
-
-            <Style x:Key="ArtItemTitleStyle" TargetType="Label">
-                <Setter Property="FontFamily" Value="{StaticResource Ubuntu}" />
-                <Setter Property="TextColor" Value="{StaticResource BlackColor}" />
-                <Setter Property="FontSize" Value="{StaticResource FontSize26}" />
-                <Setter Property="HorizontalOptions" Value="Center" />
-                <Setter Property="Margin" Value="6, 24, 6, 6" />
-            </Style>
-
-            <Style x:Key="ArtItemSubtitleStyle" TargetType="Label">
-                <Setter Property="FontFamily" Value="{StaticResource Ubuntu}" />
-                <Setter Property="TextColor" Value="{StaticResource GrayColor}" />
-                <Setter Property="FontSize" Value="{StaticResource FontSize12}" />
-                <Setter Property="HorizontalOptions" Value="Center" />
-                <Setter Property="Margin" Value="0, 0, 0, 6" />
-            </Style>
-
-            <Style x:Key="BriefIntroducctionStyle" TargetType="Label">
-                <Setter Property="FontFamily" Value="{StaticResource Ubuntu}" />
-                <Setter Property="TextColor" Value="{StaticResource BlackColor}" />
-                <Setter Property="FontSize" Value="{StaticResource FontSize18}" />
-                <Setter Property="VerticalOptions" Value="Center" />
-                <Setter Property="Margin" Value="0, 0, 0, 6" />
-            </Style>
-
-            <Style x:Key="BriefIntroducctionTextStyle" TargetType="Label">
-                <Setter Property="FontFamily" Value="{StaticResource UbuntuLight}" />
-                <Setter Property="TextColor" Value="{StaticResource BlackColor}" />
-                <Setter Property="FontSize" Value="{StaticResource FontSize16}" />
-            </Style>
-
-
-            <Style x:Key="RelatedContentTitleStyle" TargetType="Label">
-                <Setter Property="TextColor" Value="DarkGray" />
-                <Setter Property="FontSize" Value="{StaticResource FontSize12}" />
-                <Setter Property="Margin" Value="0, 6, 0, 0" />
-            </Style>
-
-            <Style x:Key="RelatedContentSubtitleStyle" TargetType="Label">
-                <Setter Property="MaxLines" Value="1" />
-                <Setter Property="FontSize" Value="{StaticResource FontSize12}" />
-                <Setter Property="Margin" Value="0, 0, 0, 6" />
-            </Style>
-            
         </ResourceDictionary>
     </ContentPage.Resources>
     <ContentPage.Triggers>
@@ -70,117 +25,32 @@
         </EventTrigger>
     </ContentPage.Triggers>
     <ContentPage.Content>
-        <ScrollView
-            Orientation="Vertical">
-            <Grid
-                RowSpacing="0">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="320" />
-                    <RowDefinition />
-                </Grid.RowDefinitions>
-                <!-- HEADER -->
-                <Grid
-                    Grid.Row="0">
-                    <WebView x:Name="webViewVideo" BackgroundColor="{StaticResource BlackColor}"/>
-                </Grid>
-                <!-- CONTENT -->
-                <StackLayout
-                    x:Name="ArtItemContent"
-                    Grid.Row="1"
-                    Opacity="0"
-                    TranslationY="300">
-                    <!-- MAIN INFO -->
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto " />
-                        </Grid.RowDefinitions>
-                        <Label 
-                            Grid.Row="0"
-                            Text="{Binding ArtItem.Title}"
-                            Style="{StaticResource ArtItemTitleStyle}"/>
-                        <Label
-                            Grid.Row="1"
-                            Text="{Binding ArtItem.Author}"
-                            Style="{StaticResource ArtItemSubtitleStyle}"/>
-                        <Label 
-                            Grid.Row="2"
-                            Text="{Binding ArtItem.PublishingDateString}"
-                            Style="{StaticResource ArtItemSubtitleStyle}"/>
-                    </Grid>
-                    <!-- BRIEF INTRODUCCTION -->
-                    <StackLayout
-                        Padding="20">
-                        <Label
-                            Text="{Binding ArtItem.Description}"
-                            Style="{StaticResource BriefIntroducctionTextStyle}"/>
-                    </StackLayout>
-                    <!-- RELATED CONTENT -->
-                    <Grid
-                        Padding="20">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="300" />
-                        </Grid.RowDefinitions>
-                        <Label
-                            Grid.Row="0"
-                            Text="Related Content"
-                            Style="{StaticResource BriefIntroducctionStyle}"/>
-                        <CollectionView
-                            Grid.Row="1"
-                            ItemsSource="{Binding ArtItem.Related}"
-                            InputTransparent="True">
-                            <CollectionView.ItemsLayout>
-                                <GridItemsLayout 
-                                    Orientation="Vertical" 
-                                    Span="2"/>
-                            </CollectionView.ItemsLayout>
-                            <CollectionView.ItemTemplate>
-                                <DataTemplate>
-                                    <Grid
-            RowSpacing="0"
-            HeightRequest="150"
-            BackgroundColor="{StaticResource BackGrayColor}"
-            Padding="0, 0, 6, 0">
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="*" />
-                                            <RowDefinition Height="Auto" />
-                                            <RowDefinition Height="Auto" />
-                                        </Grid.RowDefinitions>
-                                        <Grid.GestureRecognizers>
-                                            <TapGestureRecognizer                                                            
-                                        Tapped="Related_SelectionChanged"/>
-                                        </Grid.GestureRecognizers>
-                                        <Image x:Name="BackImage" 
-                                                           Grid.Row="0"
-                                                           Grid.RowSpan="3"
-                                                           Aspect="AspectFill" 
-                                                           IsEnabled="True"  
-                                                           Source="{local:ImageResource Xam.LaGalerna.Assets.logo_small.png}" 
-                                                           HeightRequest="100"
-                                                           WidthRequest="100"
-                                                           HorizontalOptions="Center" 
-                                                           VerticalOptions="Center">
-                                        </Image>
-                                        <ffimageloading:CachedImage
-                Grid.Row="0"
-                Aspect="AspectFill"
-                Source="{Binding UrlImg}"/>
-                                        <Label
-                Grid.Row="2"
-                Text="{Binding Title}"
-                Style="{StaticResource RelatedContentSubtitleStyle}"/>
-                                    </Grid>
-
-                                </DataTemplate>
-
-                            </CollectionView.ItemTemplate>
-                        </CollectionView>
-                    </Grid>
-                </StackLayout>
-            </Grid>
-        </ScrollView>
-
+        <Grid x:Name="VideoItemContent">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <video:VideoPlayer Grid.Row="0" x:Name="videoPlayer"
+                BackgroundColor="{StaticResource BlackColor}"
+                HorizontalOptions="FillAndExpand" 
+                VerticalOptions="FillAndExpand"
+                PlayCompletion="VideoPlayer_PlayCompletion" 
+                PlayError="VideoPlayer_PlayError"/>
+            <ActivityIndicator Grid.Row="0" 
+                HorizontalOptions="Center"
+                VerticalOptions="Center"
+                Color="White"
+                BackgroundColor="Transparent"
+                IsVisible="False">
+                <ActivityIndicator.Triggers>
+                    <DataTrigger TargetType="ActivityIndicator"
+                                 Binding="{Binding Source={x:Reference videoPlayer}, 
+                                                   Path=Status}"
+                                 Value="{x:Static video:VideoStatus.NotReady}">
+                        <Setter Property="IsVisible" Value="True" />
+                        <Setter Property="IsRunning" Value="True" />
+                    </DataTrigger>
+                </ActivityIndicator.Triggers>
+            </ActivityIndicator>
+        </Grid>
     </ContentPage.Content>
 </ContentPage>
