Update load data and net control

--- a/Xam.LaGalerna/Xam.LaGalerna/App.xaml
+++ b/Xam.LaGalerna/Xam.LaGalerna/App.xaml
@@ -2,12 +2,16 @@
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:styles="clr-namespace:Xam.LaGalerna.Styles"
+             xmlns:conv="clr-namespace:Xam.LaGalerna.Common.Converters"
              x:Class="Xam.LaGalerna.App">
 	<Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <styles:Colors />
                 <styles:Fonts />
+                <ResourceDictionary>
+                    <conv:InvBoolConverter x:Key="InvBoolConverter"/>
+                </ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
