--- a/Xam.LaGalerna/Xam.LaGalerna/Views/SpotifyPlayListView.xaml
+++ b/Xam.LaGalerna/Xam.LaGalerna/Views/SpotifyPlayListView.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Xam.LaGalerna"
              xmlns:views="clr-namespace:Xam.LaGalerna.Views"
+             xmlns:vm="clr-namespace:Xam.LaGalerna.ViewModels"
              x:Class="Xam.LaGalerna.Views.SpotifyPlayListView">
     <ContentPage.Content>
         <Grid BackgroundColor="{StaticResource BlackColor}">
@@ -31,6 +32,8 @@
                     </DataTrigger>
                 </ActivityIndicator.Triggers>
             </ActivityIndicator>
+            <views:NetErrorView x:Name="NetErrorView"
+                              IsVisible="{Binding Source={x:Static vm:MainViewModel.Instance},Path=IsNetworkOk,Converter={StaticResource InvBoolConverter}}"/>
         </Grid>
     </ContentPage.Content>
 </ContentPage>
