--- a/Xam.LaGalerna/Xam.LaGalerna/MainView.xaml
+++ b/Xam.LaGalerna/Xam.LaGalerna/MainView.xaml
@@ -4,10 +4,10 @@
              xmlns:local="clr-namespace:Xam.LaGalerna"
              xmlns:ios="clr-namespace:Xamarin.Forms.PlatformConfiguration.iOSSpecific;assembly=Xamarin.Forms.Core" 
              ios:Page.UseSafeArea="true"
+             xmlns:vm="clr-namespace:Xam.LaGalerna.ViewModels"
              xmlns:ffimageloading="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms" 
              xmlns:sharedTransitions="clr-namespace:Plugin.SharedTransitions;assembly=Plugin.SharedTransitions"
              xmlns:views="clr-namespace:Xam.LaGalerna.Views"
-             xmlns:templates="clr-namespace:Xam.LaGalerna.Views.Templates"
              BackgroundColor="{StaticResource WhiteColor}"
              x:Class="Xam.LaGalerna.MainView">
     <ContentPage.Resources>
@@ -39,13 +39,13 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <Grid x:Name="gridHeader">
-                <Image x:Name="LogoImage"                                                            
+                <ffimageloading:CachedImage x:Name="LogoImage"                                                            
                    Aspect="AspectFill"
                    IsEnabled="True"                    
                    Source="{local:ImageResource Xam.LaGalerna.Assets.logo.png}" 
                    HorizontalOptions="CenterAndExpand" 
                    VerticalOptions="CenterAndExpand">
-                </Image>
+                </ffimageloading:CachedImage>
             </Grid>
             <Grid x:Name="gridMenu" Grid.Row="1" BackgroundColor="{StaticResource BlackColor}">
 
@@ -101,7 +101,7 @@
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="Auto" />
                             </Grid.RowDefinitions>
-                            <Image x:Name="BackImage" 
+                            <ffimageloading:CachedImage x:Name="BackImage" 
                                                            Grid.Row="0"
                                                            Grid.RowSpan="3"
                                                            Aspect="AspectFill" 
@@ -111,7 +111,7 @@
                                                            WidthRequest="100"
                                                            HorizontalOptions="Center" 
                                                            VerticalOptions="Center">
-                            </Image>
+                            </ffimageloading:CachedImage>
                             <ffimageloading:CachedImage 
                                     Grid.Row="0"
                                     Grid.RowSpan="3"
@@ -131,6 +131,8 @@
                 </CollectionView.ItemTemplate>
             </CollectionView>
             <views:LoadingView x:Name="LoadingView" IsVisible="{Binding IsBusy}" Grid.Row="2" Grid.RowSpan="1" />
+            <views:NetErrorView x:Name="NetErrorView" Grid.Row="1" Grid.RowSpan="2"
+                              IsVisible="{Binding Source={x:Static vm:MainViewModel.Instance},Path=IsNetworkOk,Converter={StaticResource InvBoolConverter}}"/>
         </Grid>
     </ContentPage.Content>
 
